# hyperimpute

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml  release.yml  test.yml  test_full.yml  test_pr.yml  test_tutorials.yml
docs/: conf.py  imputers.rst  index.rst  predictions.rst  requirements.txt  utils.rst
experiments/: experiments_01_hyperimpute_with_bayesian_optimization.ipynb  experiments_01_hyperimpute_with_hyperband.ipynb  experiments_01_hyperimpute_with_naive_search.ipynb  experiments_01_plots.ipynb  experiments_02_model_performance.ipynb  experiments_03_insights_hyperimpute_convergence_std.ipynb  experiments_03_insights_hyperimpute_model_selection.ipynb  experiments_04_gain_of_function.ipynb
scripts/: nb_test.py
src/hyperimpute/: __init__.py  logger.py  version.py
src/hyperimpute/exceptions/: __init__.py
src/hyperimpute/hooks/: __init__.py
src/hyperimpute/plugins/: __init__.py
src/hyperimpute/plugins/core/: base_plugin.py  device.py  params.py
src/hyperimpute/plugins/imputers/: README.md  __init__.py  _hyperimpute_internals.py  base.py  plugin_EM.py  plugin_em.py  plugin_gain.py  plugin_ice.py  (+15 more)
src/hyperimpute/utils/: benchmarks.py  distributions.py  encoder.py  metrics.py  optimizer.py  pandas.py  parallel.py  pip.py  serialization.py  tester.py  torch.py
tests/imputers/: test_api.py  test_em.py  test_gain.py  test_hyperimpute.py  test_ice.py  test_imputation_serde.py  test_imputers_api.py  test_mean.py  test_median.py  test_mice.py  test_miracle.py  test_missforest.py  test_miwae.py  test_most_freq.py  test_perf.py  test_sinkhorn.py  test_sklearn_ice.py  test_sklearn_missforest.py  test_softimpute.py
tests/integrations/: test_sklearn.py
tests/prediction/classifiers/: test_catboost.py  test_clf_serde.py  test_gpboost.py  test_kneighbors.py  test_lgbm.py  test_logistic_regression.py  test_neural_nets.py  test_prediction_api.py  test_random_forest.py  test_svc.py  test_xgboost.py
tests/prediction/regression/: test_gpboost_regression.py  test_kneighbors_regressor.py  test_lgbm_regressor.py  test_linear_regression.py  test_neural_nets_regression.py  test_random_forest_regressor.py  test_reg_serde.py  test_svm.py  test_xgboost_regression.py
tutorials/: benchmark_imputation.py  experiments_01_hyperimpute_with_bayesian_optimization.ipynb  experiments_01_hyperimpute_with_hyperband.ipynb  experiments_01_hyperimpute_with_naive_search.ipynb  experiments_02_model_performance.ipynb  experiments_03_insights_hyperimpute_convergence_std.ipynb  experiments_03_insights_hyperimpute_model_selection.ipynb  experiments_04_gain_of_function.ipynb  extras_gain_of_function.ipynb  extras_hyperimpute_convergence.ipynb  extras_hyperimpute_internal_models.ipynb  extras_plot_experiments.ipynb  plot_experiments.ipynb  tl_experiments_03_insights_hyperimpute_model_selection.ipynb  tutorial_00_imputer_plugins.ipynb  tutorial_01_bayesian_optimization_over_imputers.ipynb  tutorial_02_benchmark_models.ipynb  tutorial_02_hyperimpute_example.ipynb  tutorial_03_hyperimpute_with_hyperband.ipynb  tutorial_03_simulating_multiple_imputation.ipynb  tutorial_04_hyperimpute_with_bayesian_optimization.ipynb
(+30 files in other folders)
